@@ -190,10 +190,19 @@
 		</ul>
 		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
+			<code>org.eclipse.sirius.diagram.ui</code>
+		</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The method 
 				<code>org.eclipse.sirius.diagram.ui.tools.api.color.ColorManager.collectVsmColors(Session)</code> has replaced 
 				<code>Map&lt;String, RGB&gt; collectVsmAndDefaultColors(Session session)</code>.
+			</li>
+		</ul>
+		<h4 id="Migrations">Migrations</h4>
+		<ul>
+			<li><span class="label label-success">Added</span> The migration participant WorkspaceImageGMFBoundsMigrationParticipant has been updated to handle the missed case of the image style of nodes contained in a container (and not directly in diagram). As reminder, this migration participant has been introduced in Sirius 7.0.0. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
+				<em>15.4.1.202403191723</em>.
 			</li>
 		</ul>
 		<h2 id="sirius7.4.0">Changes in Sirius  Desktop 7.4.0</h2>
@@ -297,7 +306,7 @@
 				<code>org.eclipse.sirius.table.tools.api.command.ITableCommandFactory.buildCreateColumnCommandFromTool(DTable, EObject, CreateTool)</code> have been deprecated for removal. They have been replaced by methods using applicable DSemanticDecorator in signature.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -369,7 +378,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h4 id="Migrations">Migrations</h4>
+		<h4 id="Migrations2">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to migrate ELK options used in VSM. Some have been renamed and some others have been removed. You should carefully read the information logged during this migration and the 
 				<a href="https://eclipse.dev/elk/downloads/releasenotes/release-0.9.0.html">ELK release notes</a> to check if any manual adjustments need to be made. The corresponding version, stored in attribute version of description:Group of the odesign file, is 
@@ -383,7 +392,7 @@
 		</ul>
 		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
 		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -441,7 +450,7 @@
 			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -560,7 +569,7 @@
 				<code>org.eclipse.sirius.business.api.session.Session.getSharedMainDAnalysis()</code> is added to get the DAnalysis that holds data and can be shared in some context such as CDO.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui5">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -618,7 +627,7 @@
 				<code>org.eclipse.sirius.properties.core.api.SiriusInputDescriptor.getOriginalSelections()</code>.
 			</li>
 		</ul>
-		<h4 id="Migrations2">Migrations</h4>
+		<h4 id="Migrations3">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span>The migration participant introduced by 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=576423">Bug 576423 - 
@@ -887,7 +896,7 @@
 				<code>org.eclipse.sirius.diagram.business.internal.metamodel.helper.ContentHelper.getAllEdgeMappings(diagramDescription, false)</code> alongside with the getAllNodeMappings and getAllContainerMappings methods.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui5">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui6">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -1021,7 +1030,7 @@
 				<code>org.eclipse.sirius.tests.support.api.EclipseTestsSupportHelper.copyDirectory(String, String)</code> have been added to ease to the copy of the test files from the test plugin to the junit workspace.
 			</li>
 		</ul>
-		<h4 id="Migrations3">Migrations</h4>
+		<h4 id="Migrations4">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to repair size of GMF nodes with Workspace Image style description. A default size was set for this type of nodes, which resulted in graphical inconsistencies (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=576423)">Bug 576423 - 
@@ -1079,7 +1088,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui6">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui7">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -1087,7 +1096,7 @@
 				<code>org.eclipse.sirius.diagram.ui.edit.api.part.AbstractDDiagramEditPart.refreshChildren()</code> has been overridden to redraw the edges figures according to the order of the GMF edges.
 			</li>
 		</ul>
-		<h4 id="Migrations4">Migrations</h4>
+		<h4 id="Migrations5">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to set a changeId value for each DRepresentationDescriptor that did not have one. Some old models were missing the changeId attribute, which could lead to technical problems. The migration participant 
 				<code>org.eclipse.sirius.diagram.ui.business.internal.migration.SetChangeIdMigrationParticipant</code> sets a random changeId if it didn&#8217;t already exist. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1099,7 +1108,7 @@
 		</ul>
 		<h2 id="sirius6.5.1">Changes in Sirius 6.5.1</h2>
 		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
-		<h4 id="Migrations5">Migrations</h4>
+		<h4 id="Migrations6">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The migration participant 
 				<code>org.eclipse.sirius.diagram.ui.business.internal.migration.NoteShapeDefaultLabelAlignmentMigrationParticipant</code> has been updated to repair Notes with a potential wrong vertical label alignment. This problem can occur since Sirius 6.3.2 used in a collaborative environment, Obeo Designer Team Edition or Team For Capella for example. The corresponding version, stored in the attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1201,7 +1210,7 @@
 				<code>new DRepresentationQuery(DRpresentation).isAutoRefresh()</code> instead.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui7">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui8">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -1239,7 +1248,7 @@
 				<code>org.eclipse.sirius.ext.gmf.runtime.editparts.GraphicalHelper.getAbsoluteBoundsWithoutLabelsIn100Percent(GraphicalEditPart)</code> has been added to get the rectangle bounds without taking labels into account. This is used, in particular, to compute the bendpoints of an edge when the source or the target of the edge is an edge.
 			</li>
 		</ul>
-		<h4 id="Migrations6">Migrations</h4>
+		<h4 id="Migrations7">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to repair rectilinear edges containing only one bendpoint. Bracket edges are not relevant. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
 				<em>14.5.0.202104070943</em>.
